# MyAndroid

./: .gitignore  CMakeLists.txt  README.md  android.ipr  android.iws
driver/: Makefile  hello.c  scull.c
frameworks/base/core/java/android/hardware/input/: IInputManager.aidl  IInputManager.java
frameworks/base/core/java/android/os/: Handler.java  Looper.java  Message.java  MessageQueue.java
frameworks/base/core/java/android/view/: InputChannel.java  InputDevice.aidl  InputDevice.java  InputEventReceiver.java
frameworks/base/core/jni/: android_os_MessageQueue.cpp  android_os_MessageQueue.h  android_view_InputChannel.cpp  android_view_InputEventReceiver.cpp
frameworks/base/services/: CMakeLists.txt
frameworks/base/services/core/: CMakeLists.txt  com_android_server_input_InputManagerService.cpp
frameworks/base/services/core/java/com/android/server/input/: InputManagerService.java
frameworks/base/services/core/java/com/android/server/wm/: InputMonitor.java
frameworks/base/services/core/jni/: CMakeLists.txt  com_android_server_input_InputManagerService.cpp
frameworks/native/: CMakeLists.txt
frameworks/native/include/android/: input.h  looper.h
frameworks/native/include/input/: Input.h  InputApplication.h  InputDevice.h  InputTransport.h  InputWindow.h
frameworks/native/libs/input/: Input.cpp  InputTransport.cpp
frameworks/native/services/inputflinger/: CMakeLists.txt  InputClassifier.h  InputListener.cpp  InputManager.cpp  InputManager.h
frameworks/native/services/inputflinger/dispatcher/: Connection.h  Entry.h  InputDispatcher.cpp  InputDispatcher.h  InputDispatcherFactory.cpp  Queue.h
frameworks/native/services/inputflinger/dispatcher/include/: InputDispatcherFactory.h  InputDispatcherInterface.h  InputDispatcherPolicyInterface.h  InputDispatcherThread.h
frameworks/native/services/inputflinger/include/: InputListener.h
frameworks/native/services/inputflinger/reader/: EventHub.cpp  InputDevice.cpp  InputReader.cpp  InputReaderFactory.cpp  InputReaderThread.cpp
frameworks/native/services/inputflinger/reader/include/: EventHub.h  InputDevice.h  InputReader.h  InputReaderFactory.h  InputReaderThread.h
frameworks/native/services/inputflinger/reader/mapper/: InputMapper.h  KeyboardInputMapper.cpp  KeyboardInputMapper.h
native/include/input/: Input.h
native/services/inputflinger/: CMakeLists.txt  InputDispatcher.h  InputListener.h  InputManager.cpp  InputManager.h  InputReader.h
system/core/libutils/: CMakeLists.txt  Looper.cpp
system/core/libutils/include/utils/: Looper.h
